# dedu_py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NOTICE  README.md  dedu.py  duplicates.json  pyproject.toml
.run/: dedu.py.run.xml  pytest.run.xml
src/dedupy/: __init__.py  core.py  hash.py
tests/data/sub2/: c.txt
tests/dedupy/: test_core.py  test_hash.py
