[project]
name = "dedu-py"
dynamic = ["version"]
description = "Ultra-fast and ridiculously simple open-source file deduplication tool."
readme = "README.md"
authors = [
    {name = "murvudd", email = "trojnarski.michal@gmail.com"}
]
requires-python = ">=3.14"
dependencies = []
license = { text = "Apache-2.0" }

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.urls]
Homepage = "https://github.com/murvudd/dedu-py"
Issues = "https://github.com/murvudd/dedu-py/issues"

[project.scripts]
dedu-py = "dedupy.__init__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"