[project]
name = "dedu-py"
dynamic = ["version"]
description = "Ultra-fast and ridiculously simple open-source file deduplication tool."
readme = "README.md"
authors = [
    {name = "murvudd", email = "trojnarski.michal@gmail.com"}
]
requires-python = ">=3.14"
[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"] # E (Error), F (Pyflakes), I (Isort - sortowanie importów)
fixable = ["ALL"]

dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.urls]
Homepage = "https://github.com/murvudd/dedu-py"
Issues = "https://github.com/murvudd/dedu-py/issues"

[project.scripts]
dedu-py = "dedupy.__init__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

